vlib/v/checker/tests/import_not_same_line_err.vv
import
 time
fn main() {
	println(time.now())
}
